Fix font on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -70,7 +70,9 @@ body {
 
 .info {
   margin-top: 10px;
-  font-family: "Brush Script MT", cursive;
+  font-family: "Brush Script MT", system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
   font-size: clamp(1rem, calc(0.2rem + 0.8vw), 2rem);
   font-weight: lighter;
   padding-bottom: 10px;
